Updated template to working version